--- a/GeoQuiz/src/main/res/layout-land/activity_quiz.xml
+++ b/GeoQuiz/src/main/res/layout-land/activity_quiz.xml
@@ -36,6 +36,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button"
+        />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
