--- a/GeoQuiz/src/main/res/layout/activity_cheat.xml
+++ b/GeoQuiz/src/main/res/layout/activity_cheat.xml
@@ -30,4 +30,11 @@
         android:text="@string/show_answer_button"
         />
 
+    <TextView
+        android:id="@+id/tv_api_level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        />
+
 </LinearLayout>
