--- a/CriminalIntent/src/main/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/src/main/res/layout-land/fragment_crime.xml
@@ -41,11 +41,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             />
+
+        <Button
+            android:id="@+id/crime_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
         <CheckBox
             android:id="@+id/crime_solved"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0"
             android:text="@string/crime_solved_label"
             />
     </LinearLayout>
