解决12.5 挑战练习 旋转屏幕出现的两个问题（Window feature must be requested before adding content）

--- a/CriminalIntent/src/main/res/layout/fragment_time_picker.xml
+++ b/CriminalIntent/src/main/res/layout/fragment_time_picker.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
     <TextView
         android:id="@+id/date_picker_title_label"
@@ -21,6 +21,7 @@
         android:id="@+id/time_picker_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-30dp"
         android:layout_gravity="end"
         android:text="@string/ok"
         />
