--- a/CriminalIntent/src/main/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/src/main/res/layout-land/fragment_crime.xml
@@ -79,6 +79,12 @@
             android:layout_weight="1"
             android:text="@string/crime_report_text"
             />
+        <Button
+            android:id="@+id/call_suspect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/call_suspect"/>
     </LinearLayout>
 
 </LinearLayout>
