--- a/CriminalIntent/src/main/res/layout/fragment_crime.xml
+++ b/CriminalIntent/src/main/res/layout/fragment_crime.xml
@@ -70,4 +70,12 @@
         android:layout_marginRight="16dp"
         android:text="@string/crime_report_text"
         />
+
+    <Button
+        android:id="@+id/call_suspect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/call_suspect"/>
 </LinearLayout>
