--- a/BeatBox/src/main/res/values-v21/styles.xml
+++ b/BeatBox/src/main/res/values-v21/styles.xml
@@ -14,8 +14,8 @@
 
     </style>
 
-    <style name="BeatBoxButton" parent="android:style/Widget.Holo.Button">
-        <item name="android:background">@color/dark_blue</item>
+    <style name="BeatBoxButton" parent="android:style/Widget.Material.Button">
+        <!--<item name="android:background">@color/dark_blue</item>-->
     </style>
 
 </resources>
