--- a/BeatBox/src/main/res/layout/list_item_sound.xml
+++ b/BeatBox/src/main/res/layout/list_item_sound.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_item_sound_button"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
-    tools:text="Sound name"
+    android:layout_margin="8dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     >
+    <Button
+        android:id="@+id/list_item_sound_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        tools:text="Sound name"
+        >
+    </Button>
 
-</Button>
+</FrameLayout>
+
