--- a/BeatBox/src/main/res/values-v21/styles.xml
+++ b/BeatBox/src/main/res/values-v21/styles.xml
@@ -15,7 +15,7 @@
     </style>
 
     <style name="BeatBoxButton" parent="android:style/Widget.Material.Button">
-        <!--<item name="android:background">@color/dark_blue</item>-->
+        <item name="android:background">@drawable/button_beat_box</item>
     </style>
 
 </resources>
